--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "nodemon server.js",
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false cd .. && npm install && npm run build"
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -22,5 +21,8 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
